--- a/about.html
+++ b/about.html
@@ -104,7 +104,8 @@
     
     <footer class="container about-md-6">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>© 2017–2021 Company, Inc. <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        <p> Made By Anshul Sharma </p>
+        <p>© 2015–2022 Coderol.com Company, Inc. <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
