--- a/suppot.html
+++ b/suppot.html
@@ -68,9 +68,9 @@
             <div class="d-flex wd-4 justify-content-between bg-primary">
                 <h3 class="mb-1">Address to Reach</h3>
             </div>
-            <h4 class="mb-1 bg-danger">7 , Floor 9 behind Home theater Noida</h4>
+            <h4 class="mb-1 bg-danger">7 , Floor 9 behind Home theater fortix Noida</h4>
         <footer class="container about-md-6 d-flex justify-content-center align-items-center">
-            <p>© 2017–2021 Company, Inc. <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+            <p>© 2017–2023 Company, Inc. <a href="#">Privacy</a> · <a href="#">Terms</a></p>
         </footer>
         <!-- Optional JavaScript; choose one of the two! -->
 
