--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
         <div class="row featurette d-flex justify-content-cneter align-items-center">
             <div class="col-md-7">
-                <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
+                <h2 class="featurette-heading">Second featurette heading. <span class="text-muted">It’ll blow your
                         mind.</span></h2>
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam nobis voluptates alias
                     eligendi amet pariatur voluptatum suscipit quia quidem tempora. Iusto quidem magni et minima.</p>
@@ -89,7 +89,7 @@
         </div>
         <div class="row featurette d-flex justify-content-cneter align-items-center">
             <div class="col-md-7 order-md-1">
-                <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
+                <h2 class="featurette-heading">Thrid featurette heading. <span class="text-muted">It’ll blow your
                         mind.</span></h2>
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam nobis voluptates alias
                     eligendi amet pariatur voluptatum suscipit quia quidem tempora. Iusto quidem magni et minima.</p>
